src_game = [
	'ai/ai.cpp',
	'ai/ai_interface.cpp',
	'ai/ai_rule.cpp',
	'ai/path_finder.cpp',
	'game/achievement.cpp',
	'game/chat_manager.cpp',
	'game/commander.cpp',
	'game/console.cpp',
	'game/game_camera.cpp',
	'game/game.cpp',
	'game/script_manager.cpp',
	'game/stats.cpp',
	'global/config.cpp',
	'global/core_data.cpp',
	'global/lang.cpp',
	'global/metrics.cpp',
	'graphics/particle_type.cpp',
	'graphics/renderer.cpp',
	'graphics/unit_particle_type.cpp',
	'gui/display.cpp',
	'gui/gui.cpp',
	'gui/selection.cpp',
	'main/battle_end.cpp',
	'main/intro.cpp',
	'main/main.cpp',
	'main/program.cpp',
	'menu/main_menu.cpp',
	'menu/menu_background.cpp',
	'menu/menu_state_about.cpp',
	'menu/menu_state_connected_game.cpp',
	'menu/menu_state_custom_game.cpp',
	'menu/menu_state_graphic_info.cpp',
	'menu/menu_state_join_game.cpp',
	'menu/menu_state_keysetup.cpp',
	'menu/menu_state_load_game.cpp',
	'menu/menu_state_masterserver.cpp',
	'menu/menu_state_mods.cpp',
	'menu/menu_state_new_game.cpp',
	'menu/menu_state_options.cpp',
	'menu/menu_state_options_graphics.cpp',
	'menu/menu_state_options_network.cpp',
	'menu/menu_state_options_sound.cpp',
	'menu/menu_state_root.cpp',
	'menu/menu_state_scenario.cpp',
	'menu/server_line.cpp',
	'network/client_interface.cpp',
	'network/connection_slot.cpp',
	'network/network_interface.cpp',
	'network/network_manager.cpp',
	'network/network_message.cpp',
	'network/network_protocol.cpp',
	'network/network_types.cpp',
	'network/server_interface.cpp',
	'sound/sound_container.cpp',
	'sound/sound_renderer.cpp',
	'steam/steam.cpp',
	'steamshim/steamshim_child.c',
	'type_instances/command.cpp',
	'type_instances/faction.cpp',
	'type_instances/object.cpp',
	'type_instances/resource.cpp',
	'type_instances/unit.cpp',
	'type_instances/upgrade.cpp',
	'types/command_type.cpp',
	'types/damage_multiplier.cpp',
	'types/element_type.cpp',
	'types/faction_type.cpp',
	'types/object_type.cpp',
	'types/projectile_type.cpp',
	'types/resource_type.cpp',
	'types/skill_type.cpp',
	'types/tech_tree.cpp',
	'types/tileset_model_type.cpp',
	'types/unit_type.cpp',
	'types/upgrade_type.cpp',
	'world/map.cpp',
	'world/minimap.cpp',
	'world/scenario.cpp',
	'world/surface_atlas.cpp',
	'world/tileset.cpp',
	'world/time_flow.cpp',
	'world/unit_updater.cpp',
	'world/water_effects.cpp',
	'world/world.cpp',
	'facilities/auto_test.cpp',
	'facilities/components.cpp',
	'facilities/game_util.cpp',
	'facilities/logger.cpp',
	]
 
	
inc_game = [
    'types',
    'ai',
    'menu',
    'steam',
    'facilities',
    'main',
    'steamshim',
    'network',
    'world',
    'global',
    'type_instances',
    'gui',
    'sound',
    'graphics',
    'game',
]

inc_common = [
  '../shared_lib/include/platform',
  '../shared_lib/include/platform/posix',
  '../shared_lib/include/platform/common',
  '../shared_lib/include/platform/win32',
#   '../shared_lib/include/platform/miniupnpc',
  '../shared_lib/include/platform/sdl',
  '../shared_lib/include/util',
  '../shared_lib/include/util/utf8',
  '../shared_lib/include/map',
  '../shared_lib/include/compression',
  '../shared_lib/include/feathery_ftp',
#   '../shared_lib/include/libircclient',
#   '../shared_lib/include/libircclient/include',
#   '../shared_lib/include/streflop',
#   '../shared_lib/include/streflop/softfloat',
#   '../shared_lib/include/streflop/libm',
#   '../shared_lib/include/streflop/libm/headers',
#   '../shared_lib/include/streflop/libm/flt-32',
  '../shared_lib/include/lua',
  '../shared_lib/include/xml',
  '../shared_lib/include/xml/rapidxml',
  '../shared_lib/include/sound',
  '../shared_lib/include/sound/openal',
  '../shared_lib/include/graphics',
  '../shared_lib/include/graphics/gl',
  ]

dep_cppunit = dependency('cppunit')
dep_fribidi = dependency('fribidi')
dep_glib = dependency('glib-2.0')
dep_pthread = dependency('threads')
dep_gl = dependency('gl')
dep_openal = dependency('openal')
dep_x11 = dependency('x11')
# dep_ogg = dependency('ogg')
dep_vorbis = dependency('vorbisfile')
dep_glew = dependency('glew')
dep_png = dependency('libpng')
dep_jpeg = dependency('libjpeg')
dep_fontconfig = dependency('fontconfig')
dep_ftgl = dependency('ftgl')
dep_freetype = dependency('freetype2')
# dep_math = dependency('libm')

executable('megaglest',
  src_game,
  include_directories: [inc_game, inc_common],
  dependencies: [dep_libmegaglest,
  	dep_sdl,
	dep_lua,
	dep_cppunit,
	dep_fribidi,
	dep_glib,
	dep_pthread,
	# dep_gl,
	dep_openal,
	dep_x11,
	# dep_ogg,
	dep_vorbis,
	dep_curl,
	dep_glew,
	dep_png,
	dep_jpeg,
	# dep_fontconfig,
	dep_ftgl,
	dep_freetype,
	# dep_math,
	],
	cpp_args: [ '-DGITVERSION="HELPME"'],
	link_args: ['-lm',
#  		'-lSM',
# 		'-lICE',
		'-lGLU',
		'-ldl',
		'-lXext',
		'-Wl,-Bstatic',
		'-lSDL2main',
		'-Wl,-Bdynamic',
	]
		
  )
